# mmc

./: .gitignore  CLAUDE.md  Makefile  README.md  build_viewer.py  compute_8vars_from_smpl.py  debug_markers.py  diagnose_params.py  experiment_log_20260412.tex  experiment_log_20260413.tex  experiment_log_20260413_final.tex  experiment_log_20260414.tex  export_vicon_markers.py  fitting_guide.tex  fix_trc_and_run.py  gsplat_pose_refine.py  main.tex  merge_rajagopal_mobl.py  merged_v0.osim  methodology_survey.tex  neural_rendering_roadmap.tex  opensim_inventory.py  opensim_smoke_test.py  part0_camera_math.tex  part0_colmap_theory.tex  part0_progress_report.tex  part2_motion_analysis.tex  part3_pitching.tex  part4_data_analysis.tex  part4_openpose_smpl_fitting.tex  part5_constraints_setup.tex  part5_dev_setup.tex  part5_research_proposal.tex  part6_opensim_ik_viewer.tex  pipeline_issues_and_solutions.tex  plan_7view_full.tex  plan_sam3d_pipeline.tex  report_sam3d_pipeline.tex  run_ablation.py  run_ablation_v3.py  (+16 more)
cardan_analysis/: angles_4way.csv  cardan.py  event_table.csv
colmap/: README.md  colmap_calibration_report.tex  round1_report.tex
pitching_pipeline/: pyproject.toml
pitching_pipeline/configs/: default.yaml
pitching_pipeline/scripts/: run_pipeline.py
pitching_pipeline/src/: config.py  pipeline.py
pitching_pipeline/src/biomechanics/: pitching_events.py
pitching_pipeline/src/pose/: triangulate.py
pitching_pipeline/src/smpl/: multiview_fit.py
pitching_pipeline/src/utils/: transforms.py
pitching_pipeline/src/validation/: metrics.py
(+147 files in other folders)
